# cmake_practice

./: .clang-format  .gitignore  LICENSE  README.md
01_basic/: CMakeLists.txt  README.md  basic.cpp
02_library/: CMakeLists.txt  README.md  app.cpp
02_library/include/my_math/: MyMath.h
02_library/lib_test/: CMakeLists.txt  my_test.cpp
02_library/my_lib/: MyMath.cpp
03_install_and_library/: CMakeLists.txt  MyAppConfig.h.in  README.md
03_install_and_library/cmake/: ide.cmake  my_lib.pc.in  my_libCPack.cmake  my_libConfig.cmake.in  utils.cmake
03_install_and_library/example/: CMakeLists.txt  Doxyfile  Doxyfile-bak1  conf.py  example.cpp  index-default.rst  index.rst
03_install_and_library/include/my_lib/: my_lib.h  version.h
03_install_and_library/installation/lib/: my_lib.lib  my_libd.lib
03_install_and_library/installation/lib/cmake/my_lib/: my_libConfig.cmake  my_libConfigTargets-debug.cmake  my_libConfigTargets-release.cmake  my_libConfigTargets.cmake  my_libConfigVersion.cmake
03_install_and_library/installation/lib/pkgconfig/: my_lib.pc
03_install_and_library/src/: app.cpp
03_install_and_library/src/my_lib/: my_lib.cpp
